fix NS_ERROR_FAILURE on firefox when skipping onboarding too fast

--- a/assets/css/section_onboarding.css
+++ b/assets/css/section_onboarding.css
@@ -28,7 +28,7 @@
   font-weight: 300;
   bottom: 0;
   left: 50%;
-  opacity: .5;
+  opacity: 0;
   color: white;
   font-size: 1.6rem;
   transform: translateX(-50%);
